<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.xinyue.helloworld.Activities.NewPostActivity">

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/cancel"
        android:onClick="movetoList" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_post"
        android:onClick="sendMessage"
        android:id="@+id/post"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button">

        <EditText
            android:id="@+id/destination"
            android:layout_height="wrap_content"
            android:hint="@string/destination"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/departure_date"
            android:layout_height="wrap_content"
            android:hint="@string/departure"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/privacy"
            android:layout_height="wrap_content"
            android:hint="@string/privacy"
            android:layout_width="fill_parent"></EditText>


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"/>

            <RadioButton android:id="@+id/radio_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

        <EditText
            android:id="@+id/return_date"
            android:layout_height="wrap_content"
            android:hint="@string/return_date"
            android:layout_width="fill_parent"></EditText>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:text="Share to Facebook" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text=""
                android:clickable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:text="Add Members" />

            <Spinner android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/spin"
                android:entries="@array/items" />

        </LinearLayout>

        <EditText
            android:id="@+id/addtional_information"
            android:layout_height="wrap_content"
            android:hint="@string/additional_information"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"></EditText>



    </LinearLayout>

</RelativeLayout>
